# Search-Ads-Filtering

./: .gitignore  CMakeLists.txt  README.md  main.cpp  requirement.txt  thread_pool.hpp  tokenizer.hpp  word_index.hpp
data/: benchmark.py  keywords.txt  queries.txt
src/: gateway.hpp  indexing.hpp  keywords.txt  main.cpp  tokenizer.hpp  utils.hpp  word_index.hpp
src/server/: epoll_event.cpp  epoll_event.hpp  epoll_server.cpp  epoll_server.hpp  http_message.hpp  http_request.hpp  http_response.hpp  http_server.hpp
